# scimodhub

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
data/examples/: config.yaml  file1.bedrmod  file2.bedrmod  file3.bedrmod  manifest.tsv
scripts/: copy_ucsc_exe
src/scimodhub/: api.py  bedrmod.py  bigbed.py  build.py  cli.py  fetch.py  hub.py  models.py  utils.py
tests/mocks/: io.py
tests/unit/: test_api.py  test_bigbed.py  test_build.py  test_fetch.py  test_hub.py  test_utils.py
